Add T5.5 new version of map

--- a/Map-summary.html
+++ b/Map-summary.html
@@ -778,6 +778,12 @@ section: browse
 </td>
 <td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.</td>
 <td>DA Keith , JR Ferrer-Paris </td></tr>
+ 
+<tr><td>
+ T5.5.IM.v2 <br/>  v2.0 <br/>
+</td>
+<td> We calculated the aridity index (AI, UNEP 1992) using  spatio-temporal series of precipitation and potential evapotranspiration (Harris et al. 2014), and selected areas of hyper-arid climate (AI<0.05).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><th colspan=3>T6. Polar/alpine (cryogenic) biome</th></tr>
 
