--- a/Map-summary.html
+++ b/Map-summary.html
@@ -75,6 +75,12 @@ section: browse
 </td>
 <td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
 <td>DA Keith , JR Ferrer-Paris </td></tr>
+ 
+<tr><td>
+ F2.1.IM.v2 <br/>  v2.0 <br/>
+</td>
+<td> Location of large lakes was taken from the HydroLAKES database (Messager et al. 2016), lakes in boreal and polar climates were excluded (Beck et al. 2018).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F2.2'><b style='font-size: 15px;font-weight: bold; color:black;'>F2.2 Small permanent freshwater lakes</b></a></td></tr>
 
@@ -115,6 +121,12 @@ section: browse
 </td>
 <td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
 <td>DA Keith , JR Ferrer-Paris </td></tr>
+ 
+<tr><td>
+ F2.6.IM.v2 <br/>  v2.0 <br/>
+</td>
+<td> A list of known salt lakes (major occurrences) was taken from Wurtsbaugh et al. (2017) and other references and matched with names in the HydroLAKES database (Messager et al. 2016). Lakes in arid and semi-arid regions (calculated from Harris et al. 2014) were also included as minor occurrences.</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F2.7'><b style='font-size: 15px;font-weight: bold; color:black;'>F2.7 Ephemeral salt lakes</b></a></td></tr>
 
