--- a/Map-summary.html
+++ b/Map-summary.html
@@ -79,10 +79,10 @@ section: browse
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F2.2'><b style='font-size: 15px;font-weight: bold; color:black;'>F2.2 Small permanent freshwater lakes</b></a></td></tr>
 
 <tr><td>
- F2.2.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F2.2.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Location of small lakes was taken from the HydroLAKES database (Messager et al. 2016), lakes in boreal and polar climates were excluded (Beck et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>2.5%) and minor occurrences (< 2.5%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F2.3'><b style='font-size: 15px;font-weight: bold; color:black;'>F2.3 Seasonal freshwater lakes</b></a></td></tr>
 
@@ -95,18 +95,18 @@ section: browse
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F2.4'><b style='font-size: 15px;font-weight: bold; color:black;'>F2.4 Freeze-thaw freshwater lakes</b></a></td></tr>
 
 <tr><td>
- F2.4.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F2.4.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Location of small and large lakes was taken from the HydroLAKES database (Messager et al. 2016), all lakes in boreal and polar climates were included (Beck et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>2.5%) and minor occurrences (< 2.5%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F2.5'><b style='font-size: 15px;font-weight: bold; color:black;'>F2.5 Ephemeral freshwater lakes</b></a></td></tr>
 
 <tr><td>
- F2.5.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F2.5.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Location of intermitent wetlands and lakes was taken from the Global Lakes and Wetlands Database (Lehner and Döll 2004), lakes in boreal and polar climates were excluded (Beck et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>30%) and minor occurrences (< 30%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F2.6'><b style='font-size: 15px;font-weight: bold; color:black;'>F2.6 Permanent inland salt lakes</b></a></td></tr>
 
@@ -119,10 +119,10 @@ section: browse
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F2.7'><b style='font-size: 15px;font-weight: bold; color:black;'>F2.7 Ephemeral salt lakes</b></a></td></tr>
 
 <tr><td>
- F2.7.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F2.7.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Location of intermitent wetlands and lakes was taken from the Global Lakes and Wetlands Database (Lehner and Döll 2004) and overlapped with arid and semi-arid regions (calculated from Harris et al. 2014). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>30%) and minor occurrences (< 30%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F2.8'><b style='font-size: 15px;font-weight: bold; color:black;'>F2.8 Artesian springs and oases</b></a></td></tr>
 
