Maps for F2, metadata for TF1

--- a/Map-summary.html
+++ b/Map-summary.html
@@ -830,42 +830,42 @@ section: browse
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/TF1.1'><b style='font-size: 15px;font-weight: bold; color:black;'>TF1.1 Tropical flooded forests and peat forests</b></a></td></tr>
 
 <tr><td>
- TF1.1.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ TF1.1.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Location of swamp and flooded forest was taken from the Global Lakes and Wetlands Database (Lehner and Döll 2004). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>30%) and minor occurrences (< 30%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/TF1.2'><b style='font-size: 15px;font-weight: bold; color:black;'>TF1.2 Subtropical/temperate forested wetlands</b></a></td></tr>
 
 <tr><td>
- TF1.2.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ TF1.2.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Location of wetlands from the Global Lakes and Wetlands Database (Lehner and Döll 2004) were overlapped with mixed forest cover from consensus land cover maps (Tuanmu et al. 2014). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>30%) and minor occurrences (< 30%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/TF1.3'><b style='font-size: 15px;font-weight: bold; color:black;'>TF1.3 Permanent marshes</b></a></td></tr>
 
 <tr><td>
- TF1.3.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ TF1.3.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Location of freshwater marshes and floodplains was taken from the Global Lakes and Wetlands Database (Lehner and Döll 2004). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>30%) and minor occurrences (< 30%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/TF1.4'><b style='font-size: 15px;font-weight: bold; color:black;'>TF1.4 Seasonal floodplain marshes</b></a></td></tr>
 
 <tr><td>
- TF1.4.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ TF1.4.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of Seasonal floodplain marshes and Episodic arid floodplains were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews, maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Location of freshwater marshes and floodplains was taken from the Global Lakes and Wetlands Database (Lehner and Döll 2004). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>30%) and minor occurrences (< 30%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/TF1.5'><b style='font-size: 15px;font-weight: bold; color:black;'>TF1.5 Episodic arid floodplains</b></a></td></tr>
 
 <tr><td>
- TF1.5.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ TF1.5.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of Seasonal floodplain marshes and Episodic arid floodplains were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews, maps of relevant ecosystems, and expertise of authors..</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Location of pan, brackish and saline wetlands was taken from the Global Lakes and Wetlands Database (Lehner and Döll 2004). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>30%) and minor occurrences (< 30%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/TF1.6'><b style='font-size: 15px;font-weight: bold; color:black;'>TF1.6 Boreal, temperate and montane peat bogs</b></a></td></tr>
 
