--- a/Map-summary.html
+++ b/Map-summary.html
@@ -712,34 +712,34 @@ section: browse
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T5.1'><b style='font-size: 15px;font-weight: bold; color:black;'>T5.1 Semi-desert steppes</b></a></td></tr>
 
 <tr><td>
- T5.1.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ T5.1.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> TEOW</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> We calculated the aridity index (AI, UNEP 1992) using  spatio-temporal series of precipitation and potential evapotranspiration (Harris et al. 2014), and selected areas of semi-arid and arid climates (0.05<AI<0.65) and low to moderate vegetation cover according to consensus landcover maps (Tuanmu et al. 2014). We exluded areas in Europe and northern South America. Occurrences were aggregated to half degree spatial resolution and cells reclassified as major (>30%) and minor occurrences (< 30%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T5.2'><b style='font-size: 15px;font-weight: bold; color:black;'>T5.2 Succulent or Thorny deserts and semi-deserts </b></a></td></tr>
 
 <tr><td>
- T5.2.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ T5.2.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> We identified areas with *arid cold deserts* and *arid hot steppes* climates according to the Köppen-Geiger climate classification (Beck et al. 2018), but excluded some areas in Oceania and South America. Occurrences were aggregated to half degree spatial resolution.</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T5.3'><b style='font-size: 15px;font-weight: bold; color:black;'>T5.3 Sclerophyll hot deserts and semi-deserts  </b></a></td></tr>
 
 <tr><td>
- T5.3.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ T5.3.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> We identified areas with *arid hot desert* climates in Oceania according to the Köppen-Geiger climate classification (Beck et al. 2018). Occurrences were aggregated to half degree spatial resolution.</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T5.4'><b style='font-size: 15px;font-weight: bold; color:black;'>T5.4 Cool deserts and semi-deserts</b></a></td></tr>
 
 <tr><td>
- T5.4.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ T5.4.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> We identified areas with *arid cold desert* climates according to the Köppen-Geiger climate classification (Beck et al. 2018), but excluded areas from Africa and Oceania. Occurrences were aggregated to half degree spatial resolution.</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T5.5'><b style='font-size: 15px;font-weight: bold; color:black;'>T5.5 Hyper-arid deserts</b></a></td></tr>
 
