--- a/Map-summary.html
+++ b/Map-summary.html
@@ -187,10 +187,10 @@ section: browse
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/FM1.1'><b style='font-size: 15px;font-weight: bold; color:black;'>FM1.1 Deepwater coastal inlets</b></a></td></tr>
 
 <tr><td>
- FM1.1.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ FM1.1.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Marine ecoregions (Spalding et al. 2008) containing major or minor occurrences of each ecosystem functional group were identified by consulting global and regional reviews, maps of relevant ecosystems, and expertise of authors. Marine ecoregions containing Deepwater inlets were clipped to the marine ‘shelf’ base layer as mapped by Harris et al. (2014).</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Known locations of Fjords where selected from a global geographical gazetteer (GeoNames 2020) and the composite gazetteer of Antarctica (SCAR 1992-2020). We further selected related coastal areas from a global coastal typology (Type IV in Dürr et al. 2011) and the adjacent marine shelves to 2000 meter depth (Becker et al 2009). A composite map was created at 30 seconds spatial resolution in geographic projection, occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (cells with at least one known occurrence) and minor occurrences (cells with > 5% occurrence of coastal/marine shelf areas).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/FM1.2'><b style='font-size: 15px;font-weight: bold; color:black;'>FM1.2 Permanently open riverine estuaries and bays</b></a></td></tr>
 
@@ -443,7 +443,7 @@ section: browse
  MT1.2.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
 </td>
 <td> The indicative map of Muddy shorelines was based on tidal flats mapped by Murray et al. (2019).</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td>NJ Murray , DA Keith , JR Ferrer-Paris </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/MT1.3'><b style='font-size: 15px;font-weight: bold; color:black;'>MT1.3 Sandy Shores</b></a></td></tr>
 
