--- a/Map-summary.html
+++ b/Map-summary.html
@@ -804,10 +804,10 @@ section: browse
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T7.2'><b style='font-size: 15px;font-weight: bold; color:black;'>T7.2 Sown pastures and old fields</b></a></td></tr>
 
 <tr><td>
- T7.2.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ T7.2.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> The presence of sown pastures was approximated by selecting areas of overlap between existing irrigation infrastructure (Siebert et al. 2005; 2013) and presence of major lifestock (Gilbert et al. 2018). Occurrences were aggregated to half degree spatial resolution and reclassified as major occurrences (>60%) and minor occurrences (<60%).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T7.3'><b style='font-size: 15px;font-weight: bold; color:black;'>T7.3 Plantations</b></a></td></tr>
 
