Update reference list for maps, adding new T3.3 map

--- a/Map-summary.html
+++ b/Map-summary.html
@@ -652,10 +652,10 @@ section: browse
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T3.3'><b style='font-size: 15px;font-weight: bold; color:black;'>T3.3 Cool temperate heathlands</b></a></td></tr>
 
 <tr><td>
- T3.3.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ T3.3.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews, maps of relevant ecosystems, and experts.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> Distribution of Cool temperate heathlands was assembled from ecosystem distribution map of Europe (European Commision 2016), landcover and ecoregions maps of North America (CEC 1997; Latifovic et al. 2016) and vegetation map from Chile (Luebert and Pliscoff 2006). Occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>60% occurrence) and minor occurrences (< 60% occurrence).</td>
+<td>JR Ferrer-Paris , DA Keith , P Pliscoff </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T3.4'><b style='font-size: 15px;font-weight: bold; color:black;'>T3.4 Rocky pavements, screes and lava flows</b></a></td></tr>
 
