--- a/Map-summary.html
+++ b/Map-summary.html
@@ -13,50 +13,58 @@ section: browse
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F1.1'><b style='font-size: 15px;font-weight: bold; color:black;'>F1.1 Permanent upland streams</b></a></td></tr>
 
 <tr><td>
- F1.1.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F1.1.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> The distribution of permanent upland streams was estimated using a global river environmental stratification database (Ouellet Dallaire et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>25%) and minor occurrences (< 25%) .</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F1.2'><b style='font-size: 15px;font-weight: bold; color:black;'>F1.2 Permanent lowland rivers</b></a></td></tr>
 
 <tr><td>
- F1.2.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F1.2.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> The distribution of permanent lowland rivers was estimated using a global river environmental stratification database (Ouellet Dallaire et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>25%) and minor occurrences (< 25%) .</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F1.3'><b style='font-size: 15px;font-weight: bold; color:black;'>F1.3 Freeze-thaw rivers and streams</b></a></td></tr>
 
 <tr><td>
- F1.3.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F1.3.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> The distribution of Freeze-thaw rivers and streams was estimated using a global river environmental stratification database (Ouellet Dallaire et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>25%) and minor occurrences (< 25%) .</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F1.4'><b style='font-size: 15px;font-weight: bold; color:black;'>F1.4 Monsoonal upland stream</b></a></td></tr>
 
 <tr><td>
- F1.4.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F1.4.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> The distribution of Monsoonal upland stream was estimated using a global river environmental stratification database (Ouellet Dallaire et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>25%) and minor occurrences (< 25%) .</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F1.5'><b style='font-size: 15px;font-weight: bold; color:black;'>F1.5 Monsoonal lowland rivers</b></a></td></tr>
 
 <tr><td>
- F1.5.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F1.5.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> The distribution of Monsoonal lowland rivers was estimated using a global river environmental stratification database (Ouellet Dallaire et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>25%) and minor occurrences (< 25%) .</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F1.6'><b style='font-size: 15px;font-weight: bold; color:black;'>F1.6 Episodic arid rivers</b></a></td></tr>
 
 <tr><td>
- F1.6.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+ F1.6.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.</td>
-<td>DA Keith , JR Ferrer-Paris </td></tr>
+<td> The distribution of Episodic arid rivers was estimated using a global river environmental stratification database (Ouellet Dallaire et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>25%) and minor occurrences (< 25%) .</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
+
+<tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/F1.7'><b style='font-size: 15px;font-weight: bold; color:black;'>Large lowland rivers</b></a></td></tr>
+
+<tr><td>
+ F1.7.IM.v2 <br/>  v1.0 <br/>
+</td>
+<td> The distribution of large lowland rivers was estimated using a global river environmental stratification database (Ouellet Dallaire et al. 2018). Occurrences were aggregated to half degree spatial resolution and cells reclassified as major occurrences (>25%) and minor occurrences (< 25%) .</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><th colspan=3>F2. Lakes biome</th></tr>
 
