--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: Welcome to the IUCN Global Ecosystem Typology website
+title: The IUCN Global Ecosystem Typology
 ---
 <h1> The IUCN Global Ecosystem Typology</h1>
 
-<h2>Introducing the new IUCN Global Ecosystem Typology</h2>
+<p>The new official site for the <a href="https://global-ecosystems.org" target="_blank">IUCN Global Ecosystem Typology</a> is up in test-phase!.</p>
 
-<p>The new site for the <a href="https://global-ecosystems.org" target="_blank">IUCN Global Ecosystem Typology</a> is up in test-phase!. The site is based on the forth coming version 2.0 (<a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="_blank">version 1.01 is available as a technical report</a>). </p>
+ <p>The current version of the Typology is v2.0 and is awaiting publication by IUCN. The previous <a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="_blank">version 1.01 is available as a technical report</a>.</p>
 
-  <p>The new typology comprises six hierarchical levels to support applications across global to local scales. The three upper levels classify ecosystems based on their functional characteristics, irrespective of species composition. The three lower levels of classification distinguish functionally similar ecosystems from one another based on compositional resemblance and enable integration of established classifications already in use and incorporated into policy infrastructure at national levels. This is crucial, as important conservation action occurs at local levels, where most expertise resides.</p>
+  <p>The <b>IUCN Global Ecosystem Typology</b> comprises six hierarchical levels to support applications across global to local scales. The three upper levels classify ecosystems based on their functional characteristics, irrespective of species composition. The three lower levels of classification distinguish functionally similar ecosystems from one another based on compositional resemblance and enable integration of established classifications already in use and incorporated into policy infrastructure at national levels. This is crucial, as important conservation action occurs at local levels, where most expertise resides.</p>
 <!--//
 <div style=";
 padding: 15px;
