--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: The IUCN Global Ecosystem Typology
 ---
 <h1> The IUCN Global Ecosystem Typology</h1>
 
-<p>The new official site for the <a href="https://global-ecosystems.org" target="_blank">IUCN Global Ecosystem Typology</a> is up in test-phase!.</p>
+<p>We invite you to visit the official site for the <a href="https://global-ecosystems.org" target="_blank">IUCN Global Ecosystem Typology</a>.</p>
 
- <p>The current version of the Typology is v2.0 and is awaiting publication by IUCN. The previous <a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="_blank">version 1.01 is available as a technical report</a>.</p>
+ <p>The current version of the Typology is v2.0 and is available aa a <a href='https://portals.iucn.org/library/node/49250'>IUCN publication</a>. The previous <a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="_blank">version 1.01 is available as a technical report</a>.</p>
 
   <p>The <b>IUCN Global Ecosystem Typology</b> comprises six hierarchical levels to support applications across global to local scales. The three upper levels classify ecosystems based on their functional characteristics, irrespective of species composition. The three lower levels of classification distinguish functionally similar ecosystems from one another based on compositional resemblance and enable integration of established classifications already in use and incorporated into policy infrastructure at national levels. This is crucial, as important conservation action occurs at local levels, where most expertise resides.</p>
 <!--//
