Update list of versions

--- a/index.html
+++ b/index.html
@@ -6,43 +6,23 @@ title: The IUCN Global Ecosystem Typology
 
 <p>We invite you to visit the official site for the <a href="https://global-ecosystems.org" target="_blank">IUCN Global Ecosystem Typology</a>.</p>
 
- <p>The current version of the Typology is v2.0 and is available aa a <a href='https://portals.iucn.org/library/node/49250'>IUCN publication</a>. The previous <a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="_blank">version 1.01 is available as a technical report</a>.</p>
-
   <p>The <b>IUCN Global Ecosystem Typology</b> comprises six hierarchical levels to support applications across global to local scales. The three upper levels classify ecosystems based on their functional characteristics, irrespective of species composition. The three lower levels of classification distinguish functionally similar ecosystems from one another based on compositional resemblance and enable integration of established classifications already in use and incorporated into policy infrastructure at national levels. This is crucial, as important conservation action occurs at local levels, where most expertise resides.</p>
-<!--//
-<div style=";
-padding: 15px;
-width: 60%;
-   position: relative;
-  left: 0px;">
 
+<h2>Versions</h2>
+<ul>
+   Several versions of the IUCN Global Ecosystem Typology have been released so far.
+   <li>Version v2.1 is under preparation, and content will be updated soon.</li>
 
-   <div style="background-color:#ffcccc;
-   position: fixed;
-  bottom: 0;
-  font-size: 15px;
-  right: 0;
-   border: 3px solid #AD2221;
-  max-width: 35%;
-  padding: 15px;
-  margin: auto;">
-{% include form-step1.html %}
-</div>
-//-->
+   <li>The <a href='https://portals.iucn.org/library/node/49250'>official web site</a> provides the most up-to-date version.</li>
+
+   <li>Version v2.0 is available as an <a href='https://portals.iucn.org/library/node/49250'>IUCN publication</a>.</li>
+
+   <li>Version 1.01 is available as a <a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="_blank">IUCN technical report</a>.</li>
+</ul>
+
 
 <h2>Consultation and feedback</h2>
 
 <p>The <b style='font-size: 15px;font-weight: bold;'>IUCN Commission on Ecosystem Management</b> co-ordinated <a href="Development.html">series of workshops and meetings during 2017-2019</a> to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
 
 <p>You can read more on the IUCN Global Ecosystem Typology <a href="Summary.html">here</a>.</p>
-<!--//
-<p>Given evolving knowledge of the world’s ecosystems, the Commission is seeking ongoing input from ecosystem specialists around the world. This site is dedicated to open consultation and review of profiles for Biomes (level 2) and Ecosystem Functional Groups (level 3) of the Global Ecosystem Typology. Each Ecosystem Functional Groups has a <a href="Profile-structure.html">descriptive profile</a>.</p>
-
-<p>We are seeking specialist comment from ecosystem experts with research or management experience in any of the functional groups of ecosystems described in this site. If you are interested in participating, please follow this steps:</p>
-<ol>
-  <li> Please <a href="https://forms.gle/8Cwyd36AFyrL74VYA" target="_blank">complete a short survey</a> to share with us details of your qualifications, link to one professional profile (ORCID, google scholar, or similar) and affiliation, as well as your area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</li>
-  <li> Navigate through the <a href="Realms.html">Realms</a> to reach the profiles of <a href="Biomes.html">Biomes</a> (level 2) and <a href="EFGs.html">Ecosystem Functional Groups</a> (level 3). In each profile page you can fill the blue form to evaluate the profile's content and add specific comments and suggestions.</li>
-</ol>
-
-</div>
-//-->
