Update list of versions (links)

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ title: The IUCN Global Ecosystem Typology
   <p>The <b>IUCN Global Ecosystem Typology</b> comprises six hierarchical levels to support applications across global to local scales. The three upper levels classify ecosystems based on their functional characteristics, irrespective of species composition. The three lower levels of classification distinguish functionally similar ecosystems from one another based on compositional resemblance and enable integration of established classifications already in use and incorporated into policy infrastructure at national levels. This is crucial, as important conservation action occurs at local levels, where most expertise resides.</p>
 
 <h2>Versions</h2>
+<p>Several versions of the IUCN Global Ecosystem Typology have been released so far.</p>
 <ul>
-   Several versions of the IUCN Global Ecosystem Typology have been released so far.
    <li>Version v2.1 is under preparation, and content will be updated soon.</li>
 
-   <li>The <a href='https://portals.iucn.org/library/node/49250'>official web site</a> provides the most up-to-date version.</li>
+   <li>The <a href="https://global-ecosystems.org" target="next">official web site</a> provides the most up-to-date version.</li>
 
-   <li>Version v2.0 is available as an <a href='https://portals.iucn.org/library/node/49250'>IUCN publication</a>.</li>
+   <li>Version v2.0 is available as an <a href='https://portals.iucn.org/library/node/49250' target="next">IUCN publication</a>.</li>
 
-   <li>Version 1.01 is available as a <a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="_blank">IUCN technical report</a>.</li>
+   <li>Version 1.01 is available as a <a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="next">IUCN technical report</a>.</li>
 </ul>
 
 
