--- a/Map-summary.html
+++ b/Map-summary.html
@@ -13,20 +13,20 @@ section: browse
     <th>Description</th>
     <th>Contributors</th>
   </tr>
-  {{ site.data.mapinfo | where: "efg", "F1.1" }}
-  
-  {% assign mapdata = site.data.mapinfo | where: "efg", "F1.1" %}
 
-  <tr>
-    <td colspan=3>F1.1</td>
-  </tr>
-{% for item in mapdata %}
-<tr>
-  <td> {{ item }} </td>
-  <td>{{ item.code }} {{ item.version }}</td>
-  <td>{{ item.description }}</td>
-  <td>{{ item.contributors }}</td>
-</tr>
-{% endfor %}
+  {% for EFG in site.EFGs %}
+    <tr>
+      <th colspan=3><a href="EFGs/{{ EFG.code }}">{{ EFG.name }}</a></th>
+    </tr>
+    {% assign mapdata = site.data.mapinfo | where: "efg", EFG %}
+    {% for item in mapdata %}
+    <tr>
+      <td>{{ item.code }} {{ item.version }}</td>
+      <td>{{ item.description }}</td>
+      <td>{{ item.contributors }}</td>
+    </tr>
+    {% endfor %}
+  {% endfor %}
+
 
 </table>
