Update links to new version

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ title: The IUCN Global Ecosystem Typology
 <h2>Versions</h2>
 <p>Several versions of the IUCN Global Ecosystem Typology have been released so far.</p>
 <ul>
+   <li>The <a href="https://global-ecosystems.org" target="next">official web site</a> provides the most up-to-date version. </li>
    <li>Version v2.1 is under preparation, and content will be updated soon.</li>
+   <li>Version v2.0 was published as an <a href='https://portals.iucn.org/library/node/49250' target="next">IUCN publication</a>.</li>
 
-   <li>The <a href="https://global-ecosystems.org" target="next">official web site</a> provides the most up-to-date version.</li>
-
-   <li>Version v2.0 is available as an <a href='https://portals.iucn.org/library/node/49250' target="next">IUCN publication</a>.</li>
-
-   <li>Version 1.01 is available as a <a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="next">IUCN technical report</a>.</li>
+   <li>Version 1.01 was completed as a IUCN technical report (currently not available).
+   <!-- <a href="https://iucnrle.org/static/media/uploads/references/research-development/keith_etal_iucnglobalecosystemtypology_v1.01.pdf" target="next"></a> -->
+ </li>
 </ul>
 
 
