Update links to the upcoming article

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: The IUCN Global Ecosystem Typology
 <p>Several versions of the IUCN Global Ecosystem Typology have been released so far.</p>
 <ul>
    <li>The <a href="https://global-ecosystems.org" target="next">official web site</a> provides the most up-to-date version. </li>
-   <li>Version v2.1 is under preparation, and content will be updated soon.</li>
+   <li>Version v2.1 will be published soon as an appendix to <a href='https://doi.org/10.1038/s41586-022-05318-4' target="next">Keith et al. 2022</a>.</li>
    <li>Version v2.0 was published as an <a href='https://portals.iucn.org/library/node/49250' target="next">IUCN publication</a>.</li>
 
    <li>Version 1.01 was completed as a IUCN technical report (currently not available).
